<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#DCEDC8"
>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
    >
        <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="login"
                android:textColor="@color/green"
                android:textSize="@dimen/text_heading_2x"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:fontFamily="monospace"
                android:layout_marginTop="80dp"
                android:layout_marginStart="@dimen/margin_large"
        />
        <TextView
                android:layout_below="@id/tv_login_title"
                android:id="@+id/tv_login_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_description"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:elevation="4dp"
                android:backgroundTint="@color/white"
        />
        <ImageView
                android:layout_alignParentEnd="true"
                android:id="@+id/iv_image"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:src="@drawable/leaf"
                android:backgroundTint="@color/white"/>
        <TextView
                android:layout_below="@id/tv_login_description"
                android:id="@+id/tv_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_email_id"
                android:layout_marginTop="50dp"
                android:layout_marginStart="140dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_regular"
                android:textAllCaps="true"
                android:textColor="@color/black"/>
        <EditText
                android:layout_below="@id/tv_email_id"
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:elevation="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="100dp"
                android:background="@drawable/edit_text_round_corner"
                android:backgroundTint="@color/white"
                android:inputType="text"
        />
        <TextView

                android:layout_below="@id/et_email"
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Passoword"
                android:layout_marginTop="50dp"
                android:layout_marginStart="140dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_regular"
                android:textAllCaps="true"
                android:textColor="@color/black"/>
        <EditText
                android:layout_below="@id/tv_password"
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:elevation="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="100dp"
                android:background="@drawable/edit_text_round_corner"
                android:backgroundTint="@color/white"
                android:inputType="textPassword"
        />
        <TextView
                android:layout_below="@id/et_password"
                android:id="@+id/tv_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@color/bluegrey"
                android:textSize="@dimen/text_regular"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/tv_forget_password"/>
        <Button
                android:layout_below="@id/tv_forget"
                android:id="@+id/btn_login"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/green"
                android:background="@drawable/login_round_corner"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="80dp"
                android:text="@string/tv_login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_heading_1x"
                android:paddingLeft="@dimen/text_heading_1x"
        />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>